# af_bevy_specs

./: Cargo.toml  README.md
assets/specs/: nerf_bullet.bullet.spec  nerf_gun.gun.spec
examples/: spec_test.rs
plugin_macro/: Cargo.toml
plugin_macro/src/: lib.rs
spec/: Cargo.toml
spec/src/: lib.rs  prelude.rs  spec.rs
spec_macro/: Cargo.toml
spec_macro/src/: lib.rs
