[package]
name = "spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_egui = "0.19.0"
serde = "1.0.152"
ron = "0.8.0"
proc-macro2 = "1.0.51"
bevy_common_assets = { version = "0.4.0", features = ["ron", "serde_ron"] }
plugin_macro = { path = "../plugin_macro" }
spec_macro = { path = "../spec_macro" }